Bridge Consistency & Preprocessor Conditionals
-Changed GUI to be consistent with bridge pattern
-->Added numerous table functions
-->Cell windows and upper entry box now call TABLE functions rather than doing logic in place
-->Rearranged these window procedures to be grouped with the top-level procedure

-Added preprocessor conditionals to separate out Windows-specific code
-->This allows all supported platforms to share code in one place and then have preprocessor flags select the relevant code

[ ] ToDo: investigate that subscription map that keeps crashing the program

--- a/SpreadsheetApplication/SpreadsheetApplication.vcxproj.filters
+++ b/SpreadsheetApplication/SpreadsheetApplication.vcxproj.filters
@@ -30,14 +30,8 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SpreadsheetApplication.h">
       <Filter>Header Files\Top-Level Window</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="__Cell.h">
       <Filter>Header Files\Table</Filter>
@@ -47,6 +41,12 @@
     </ClInclude>
     <ClInclude Include="Utilities.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Resource.h">
+      <Filter>Header Files\Top-Level Window</Filter>
+    </ClInclude>
+    <ClInclude Include="targetver.h">
+      <Filter>Header Files\Top-Level Window</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
