Added Console Mode
-Added stub for console mode instead of Windows GUI
-Verified that project now compiles
-Had to make several changes to make it work
-->Preprocessor flag cue needed to be changed WIN32 -> _WINDOWS
-->Added flag where still needed
-->Added definition for min macro from Windows header file into Utilities

-To switch between the two...
-->Change preprocessor flag _WINDOWS -> _CONSOLE
-->Change linker subsystem WINDOWS -> CONSOLE
-->(Project  Properties -> Linker -> System -> SubSystem)

--- a/SpreadsheetApplication/SpreadsheetApplication.vcxproj
+++ b/SpreadsheetApplication/SpreadsheetApplication.vcxproj
@@ -105,6 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -168,6 +169,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="__Cell.cpp" />
+    <ClCompile Include="__Table_Console_Application.cpp" />
     <ClCompile Include="__Table_Windows_OS.cpp" />
   </ItemGroup>
   <ItemGroup>
