Moved Cell Functions
-Moved Cell Functions out of FUNCTION_CELL class
-They no longer clutter up that class and have their own implementation file

-Unit tests needed a reference added to the new .obj file
-Unit tests needed to be updated with recent changes
-Unit tests found an error with initializing a FUNCTION that starts in an error state
-->The initialize function did not catch errors that propagated up the chain

--- a/SpreadsheetApplication/SpreadsheetApplication.vcxproj
+++ b/SpreadsheetApplication/SpreadsheetApplication.vcxproj
@@ -169,6 +169,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="__Cell.cpp" />
+    <ClCompile Include="__Cell_Functions.cpp" />
     <ClCompile Include="__Table_Console_Application.cpp" />
     <ClCompile Include="__Table_Windows_OS.cpp" />
   </ItemGroup>
