Created a new C++ Wrapper to replace C-style API calls
-The idea is that this will make things more clear & concise in general
-This also uses strong-types to minimize errors
-A few segments became more verbose, but replaced opaque, error-prone function calls

Example:
-CreateWindow takes 11 arguments, including 4 ints in a row for position & size
-The new system separates out the creation from the display details
-position & size now have their own types to prevent mixing up arguments
-Display details can be modified and chained together using a fluent builder pattern

--- a/SpreadsheetApplication/SpreadsheetApplication.vcxproj
+++ b/SpreadsheetApplication/SpreadsheetApplication.vcxproj
@@ -151,6 +151,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Utilities.h" />
+    <ClInclude Include="__WINDOW.h" />
     <ClInclude Include="__Cell.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SpreadsheetApplication.h" />
@@ -160,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="About.cpp" />
+    <ClCompile Include="__WINDOW.cpp" />
     <ClCompile Include="Windows Infrastructure.cpp" />
     <ClCompile Include="SpreadsheetApplication.cpp" />
     <ClCompile Include="stdafx.cpp">
