--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,18 +1,22 @@
 ﻿# Add source to this project's executable.
-add_executable (Spreadsheet-Application WIN32 "Windows Infrastructure.cpp")
-target_compile_definitions(Spreadsheet-Application
+add_executable (Spreadsheet-Windows-GUI WIN32 "Windows Infrastructure.cpp")
+target_compile_definitions(Spreadsheet-Windows-GUI
   PRIVATE "UNICODE;_UNICODE"
 )
-
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET Spreadsheet-Application PROPERTY CXX_STANDARD 17)
-endif()
-
-target_sources(Spreadsheet-Application PRIVATE
+target_sources(Spreadsheet-Windows-GUI PRIVATE
 	About.cpp
 	SpreadsheetApplication.cpp
 	SpreadsheetApplication.rc
 	Cell.cpp
 	Cell_Functions.cpp
 	Table_Windows_OS.cpp
+)
+
+add_executable (Spreadsheet-Console-UI "Table_Console_Application.cpp")
+target_compile_definitions(Spreadsheet-Console-UI
+  PRIVATE "UNICODE;_UNICODE;_CONSOLE"
+)
+target_sources(Spreadsheet-Console-UI PRIVATE
+	Cell.cpp
+	Cell_Functions.cpp
 )
