Better Isolate Window Logic
- Window logic should be more isolated
- Split references from console
- Pull out elements of common header file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿# Add source to this project's executable.
 add_executable (Spreadsheet-Windows-GUI WIN32 "Windows Infrastructure.cpp")
 target_compile_definitions(Spreadsheet-Windows-GUI
-  PRIVATE "UNICODE;_UNICODE"
+  PRIVATE "UNICODE;_UNICODE;WIN32_LEAN_AND_MEAN"
 )
 target_sources(Spreadsheet-Windows-GUI PRIVATE
 	About.cpp
@@ -13,9 +13,8 @@ target_sources(Spreadsheet-Windows-GUI PRIVATE
 )
 
 add_executable (Spreadsheet-Console-UI "Table_Console_Application.cpp")
-target_compile_definitions(Spreadsheet-Console-UI
-  PRIVATE "UNICODE;_UNICODE;_CONSOLE"
-)
+target_compile_definitions(Spreadsheet-Console-UI PRIVATE "UNICODE;_UNICODE;_CONSOLE")
+
 target_sources(Spreadsheet-Console-UI PRIVATE
 	Cell.cpp
 	Cell_Functions.cpp
