--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,4 @@
 add_executable (tests test.cpp)
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
 target_include_directories(tests PRIVATE ${PROJECT_SOURCE_DIR}/src)
+target_link_directories(tests PRIVATE ${PROJECT_SOURCE_DIR}/src)
