--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 ﻿find_package(Catch2 3 REQUIRED)
 add_executable (tests test.cpp)
-target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
-target_include_directories(tests PRIVATE ${PROJECT_SOURCE_DIR}/src)
-target_link_directories(tests PRIVATE ${PROJECT_SOURCE_DIR}/src)
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain cell)
+
+include(Catch)
+catch_discover_tests(tests)
